--- a/D3/D3_numpy.ipynb
+++ b/D3/D3_numpy.ipynb
@@ -446,7 +446,7 @@
    "id": "8c4bb215",
    "metadata": {},
    "source": [
-    "## Array Multiplication"
+    "## [Array Multiplication](http://matrixmultiplication.xyz/)"
    ]
   },
   {
